Harden mobile companion setup and releases